--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
         }
     ],
     "require": {
-        "php": ">=5.3.2",
+        "php": ">=5.3.2"
     },
     "autoload": {
         "psr-0": { "MarcW": "bundles" }
     },
-    "target-dir": "bundles/MarcW/Bundle/WurstBundle",
+    "target-dir": "bundles/MarcW/Bundle/WurstBundle"
 }
